# Pata

./: .gitignore  ABOUT_PACKAGE_PROPOSAL.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LAUNCH_VISIBILITY.md  LICENSE  LIVE_LAUNCH_CHECKLIST.md  POST_LAUNCH_SIGNAL_LOG.md  PRODUCT_OVERVIEW.md  PUBLIC_FEEDBACK.md  PUBLIC_SIGNAL_TRACKER.md  QUICKSTART.md  README.md  REAL_LAUNCH_EXECUTION.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  USE_CASE_PROOFS.md  V4_TRANSITION.md  VISUAL_OVERVIEW.md
.github/DISCUSSION_TEMPLATE/: architecture-feedback.yml  benchmark-discussion.yml  use-case-ideas.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  product_feedback.md
.github/workflows/: ci.yml
benchmarks/public-comparison/: BENCHMARKS.md  REPORT.md  latest.json  run_benchmark.py
config/: app.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/agent-memory/: Cargo.toml
crates/agent-memory/src/: lib.rs
crates/agent-reasoning/: Cargo.toml
crates/agent-reasoning/src/: lib.rs
crates/agent-traits/: Cargo.toml
crates/agent-traits/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/persona-developer/: Cargo.toml
crates/persona-developer/src/: lib.rs
crates/persona-personal/: Cargo.toml
crates/persona-personal/src/: lib.rs
crates/persona-registry/: Cargo.toml
crates/persona-registry/src/: lib.rs
crates/persona-smb/: Cargo.toml
crates/persona-smb/src/: lib.rs
crates/persona-teacher/: Cargo.toml
crates/persona-teacher/src/: lib.rs
crates/runtime-support/: Cargo.toml
crates/runtime-support/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: PROOF_PACK.md  README.md  STARTUP_CREDIBILITY_PACK.md  github_about.md  launch_v2.md  public_launch_pack.md  release_v0.1.0.md
docs/releases/: v0.1.0.md
evals/: README.md  cases.v1.tsv  suite.v1.json
examples/: multi_persona_demo.md  persona_comparison.md  persona_developer_showcase.md  persona_personal_showcase.md  persona_smb_showcase.md  persona_teacher_showcase.md
proof/: run_demo.sh
proof/benchmark/: README.md  report.md  results.json  run_benchmark.sh  tasks.json
proof/fixtures/: smb_support_ticket.json
proof/inputs/: developer_code_review.goal  smb_support_ticket.goal  teacher_structured_tutoring.goal
proof/traces/latest/: README.md  developer_code_review.raw.json  developer_code_review.trace.md  smb_support_ticket.trace.md  teacher_structured_tutoring.raw.json  teacher_structured_tutoring.trace.md
proof/use-cases/: code-review-flow.md  smb-support-ticket-workflow.md  structured-tutoring-session.md
quickstart/flagship-demo/: QUICKSTART.md  fixture_developer_output.json  run.sh
quickstart/recruiter-demo/: DEMO_OUTPUT.md  README.md  render_demo.py  run.sh
releases/v0.1.0/: ARTIFACTS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md
src/: analyzer.rs  ast_fingerprint.rs  cli.rs  coder.rs  config.rs  diagnostics.rs  evals.rs  explain.rs  fssec.rs  history.rs  intelligence.rs  io_fast.rs  json.rs  lock.rs  long_memory.rs  main.rs  memory_engine.rs  mission.rs  model.rs  multiverse.rs  optimizer.rs  patcher.rs  planner.rs  retriever.rs  reviewer.rs  rollback.rs  runner.rs  scanner.rs  state_store.rs  status.rs  tester.rs  types.rs  ui.rs
tests/: e2e_cli.rs
