[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
agent-memory = { path = "../agent-memory" }
agent-reasoning = { path = "../agent-reasoning" }
agent-traits = { path = "../agent-traits" }
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
