[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-traits = { path = "../agent-traits" }
persona-registry = { path = "../persona-registry" }
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
