[package]
name = "runtime-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-traits = { path = "../agent-traits" }
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
