[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-traits = { path = "../agent-traits" }
persona-registry = { path = "../persona-registry" }
runtime-support = { path = "../runtime-support" }
anyhow.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
